Fix for nav bar overlap

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -271,7 +271,7 @@ header {
   }
 
 .navbar.fixed-top {
-  top: 50px;
+  top: 42px;
   z-index: 1040;
 }
 
